chore : markdown으로 변환 및 code chapter 8,9 add

--- a/IT_엔지니어를_위한_네트워크_입문/8장_서버_네트워크_기본.md
+++ b/IT_엔지니어를_위한_네트워크_입문/8장_서버_네트워크_기본.md
@@ -1,4 +1,7 @@
-8장 서버 네트워크 기본
+# 8장
+
+## 서버 네트워크 기본
+
 서버의 네트워크 설정 파일에 대한 설명과 라우팅 테이블 수정 방식, 네트워크 확인을 위한 명령어들을 설명해놨다.
 네트워크 설정 파일이나 라우팅 테이블을 내가 손 댈 일은 별로 없을거 같다.
 다만 라우팅 테이블을 명령어와 설정 파일을 통해서 바꿀 수 있는데 약간의 차이라면 명령어 기반은 즉시 적용이 되나 서버나 네트워크를 재부팅하면 다시 초기화되고 설정 파일은 영구적이나 적용하기 위해서는 재부팅이 필요하다는 것 같다.(실습해보기에 버전도 다르며 조금 까다로운 부분들이 있어 직접 해보지는 않았다.)
