일반 텍스트 파일 md 파일로 변환

--- a/우아한_타입스크립트_with_리액트/4장 타입 확장하기 좁히기 4-2.md
+++ b/우아한_타입스크립트_with_리액트/4장 타입 확장하기 좁히기 4-2.md
@@ -1,4 +1,5 @@
-4장 타입 확장하기 좁히기 4-2
+# 4장 타입 확장하기 좁히기 4-2
+
 타입 좁히기 - 타입 가드
 변수의 타입 범위를 명시적으로 좁히고 싶을 때 사용하는 방법으로
 자바스크립트의 연산자를 사용한 방식, 사용자 정의 타입 가드 방식으로 구분한다.
@@ -9,5 +10,5 @@ if문 등 제어문을 함께 사용한다.
 사용자 정의 타입 가드 방식 중 하나인 is는 사용자 정의 함수의 반환값을 통해서 타입 추론을 할 때 사용한다.
 ex
 function a(str: string): str is Type {
-	typeof str === Type
+typeof str === Type
 }
