기존 파일 마크다운 형태로 변경

--- a/IT_엔지니어를_위한_네트워크_입문/8장_서버_네트워크_기본.md
+++ b/IT_엔지니어를_위한_네트워크_입문/8장_서버_네트워크_기본.md
@@ -9,12 +9,13 @@
 네트워크 확인 명령어는 일반 웹 개발자여도 자주 사용하는 명령어들이 보였다.
 ipconfig, ifconfig, ping, tcping, traceroute(리눅스)/tracert(윈도), tcptraceroute, netstat, nslookup, telnet, tcpdump 가 나와있으며
 간단히 설명해보자면
-ipconfig(윈도)/ifconfig(유닉스) : 두 명령어 모두 윈도, 유닉스 계열에서 해당 서버의 네트워크 정보를 표시하는 용도로 사용한다.
-ping : 원하는 서버까지로의 네트워크 연결을 확인하다.
-tcping : ping과 동일하나 포트까지 지정하여 서비스의 상태까지 확인한다.
-traceroute(리눅스)/tracert(윈도) : 목적지까지의 있는 홉 만큼 반복하며 네트워크 연결 상태를 확인한다.
-tcptraceroute : tcping과 마찬가지로 traceroute(리눅스)/tracert(윈도)에서 포트까지 지정하여 확인 가능하다.
-netstat : 많은 기능들이 내포되어 있지만 대체로 해당 서버의 서비스 상태를 확인하는데 사용한다.
-nslookup : 지정한 도메인이나 서버 대한 DNS 쿼리를 날려 정보를 얻어온다.
-telnet : 원격 접속 명령어였으나 현재는 서버의 서비스 연결을 확인하는 정도로 사용하며, 원격 접속은 ssh를 사용한다.
-tcpdump : 네트워크 패킷들을 덤프 떠 출력 및 파일로 저장한다.
+
+- ipconfig(윈도)/ifconfig(유닉스) : 두 명령어 모두 윈도, 유닉스 계열에서 해당 서버의 네트워크 정보를 표시하는 용도로 사용한다.
+- ping : 원하는 서버까지로의 네트워크 연결을 확인하다.
+- tcping : ping과 동일하나 포트까지 지정하여 서비스의 상태까지 확인한다.
+- traceroute(리눅스)/tracert(윈도) : 목적지까지의 있는 홉 만큼 반복하며 네트워크 연결 상태를 확인한다.
+- tcptraceroute : tcping과 마찬가지로 traceroute(리눅스)/tracert(윈도)에서 포트까지 지정하여 확인 가능하다.
+- netstat : 많은 기능들이 내포되어 있지만 대체로 해당 서버의 서비스 상태를 확인하는데 사용한다.
+- nslookup : 지정한 도메인이나 서버 대한 DNS 쿼리를 날려 정보를 얻어온다.
+- telnet : 원격 접속 명령어였으나 현재는 서버의 서비스 연결을 확인하는 정도로 사용하며, 원격 접속은 ssh를 사용한다.
+- tcpdump : 네트워크 패킷들을 덤프 떠 출력 및 파일로 저장한다.
