--- a/우아한_타입스크립트_with_리액트/4장 타입 확장하기 좁히기 4-2.md
+++ b/우아한_타입스크립트_with_리액트/4장 타입 확장하기 좁히기 4-2.md
@@ -8,7 +8,9 @@
 if문 등 제어문을 함께 사용한다.
 
 사용자 정의 타입 가드 방식 중 하나인 is는 사용자 정의 함수의 반환값을 통해서 타입 추론을 할 때 사용한다.
-ex
+
+```typescript
 function a(str: string): str is Type {
-typeof str === Type
+  typeof str === Type;
 }
+```
