--- a/우아한_타입스크립트_with_리액트/4장 타입 확장하기, 좁히기 4-1.md
+++ b/우아한_타입스크립트_with_리액트/4장 타입 확장하기, 좁히기 4-1.md
@@ -5,8 +5,13 @@
 extends는 interface로 선언한 타입에 사용이 가능하며
 interface로 선언 시 extends로 다른 인터페이스가 가진 값들을 받아올 수 있다.
 
-교차 타입 및 유니온 타입은 interface 혹은 type 키워드로 선언한 type alias 모두에서 사용할 수 있으나 이렇게 생성된 type은 type 키워드의 변수에 저장하여야 한다.
+교차 타입 및 유니온 타입은 interface 혹은 type 키워드로 선언한 type alias 모두에서 사용할 수 있으나 이렇게 생성된 type은 type 키워드의 변수에 저장하여야 한다.  
 교차 타입(&)은 extends와 같이 두 type alias 혹은 interface가 가진 값들을 묶은 하나의 새로운 타입을 생성한다.
 
 유니온 타입(|)은 or 조건으로 보면 되며 유니온 타입으로 묶인 타입들 중 하나의 타입을 가질 수 있음을 뜻한다.
-let a : number | string; 인 경우 a라는 변수는 number 또는 string 두 값 중 하나만을 가질 수 있다.
+
+```typescript
+let a: number | string;
+```
+
+인 경우 a라는 변수는 number 또는 string 두 값 중 하나만을 가질 수 있다.
