--- a/우아한_타입스크립트_with_리액트/5장_타입_활용하기_5-1.md
+++ b/우아한_타입스크립트_with_리액트/5장_타입_활용하기_5-1.md
@@ -16,3 +16,15 @@ extends와 함께 사용하여 타입 추론을 하는 infer 키워드도 알아
 ```typescript
 
 ```
+
+템플릿 리터럴 타입
+
+```typescript
+
+```
+
+Pick, Omit 등의 유틸리티 타입 및 배민에서 사용하는 PickOne Custom 유틸리티 타입
+
+```typescript
+
+```
