--- a/spring_security/2부5장.md
+++ b/spring_security/2부5장.md
@@ -42,3 +42,11 @@ Security Context를 관리하는 객체는 3가지 방식으로 모드를 지정
 3. MODE_GLOBAL - 모든 스레드가 동일한 컨텍스트를 가지게 한다.
 
 너무 자세하게는 알 필요가 없을거 같으며, 필요한 경우 추가적으로 찾아보면 될 거 같다.
+
+그 외에 Callable 및 Runnable 등으로 spring이 알 수 없는 스레드가 코드 상에서 생성이 되는 경우에는 위의 설정으로 security context를 넘겨 줄 수 없으므로 
+이런 경우 아래와 같은 클래스로 스레드를 감싸주어 context를 넘겨주는 작업이 필요하다.
+* DelegatingSecurityContextExecuter
+* DelegatingSecurityContextService
+* DelegatingSecurityContextScheduleExecutorService
+* DelegatingSecurityContextRunnable
+* DelegatingSecurityContextCallable
